--- a/jump-pod.yaml
+++ b/jump-pod.yaml
@@ -16,10 +16,10 @@ spec:
       limits:
         cpu: "1"
         memory: 1Gi
-    volumeMounts:
-    - name: valheim
-      mountPath: /valheim
-  volumes:
-  - name: valheim
-    persistentVolumeClaim:
-      claimName: valheim
+#    volumeMounts:
+#    - name: valheim
+#      mountPath: /valheim
+#  volumes:
+#  - name: valheim
+#    persistentVolumeClaim:
+#      claimName: valheim
