--- a/valheim.yaml
+++ b/valheim.yaml
@@ -1,11 +1,3 @@
-#---
-#apiVersion: v1
-#kind: PersistentVolume
-#metadata:
-#  name: valheim
-#spec:
-#  persistentVolumeReclaimPolicy: Retain
-#  storageClassName: gp2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -127,6 +119,7 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-type: external
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
   namespace: valheim
   name: valheim
 spec:
